--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp-watch": "^4.3.11",
     "gulp-minify-css": "^1.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
